Added the css for the loader to change the color to our theme

--- a/client/src/components/SideBar/sidebar.css
+++ b/client/src/components/SideBar/sidebar.css
@@ -27,3 +27,7 @@
   .list-group .active .name {
     color: #44ffd2;
   }
+
+  .spinner-border{
+    border-color: #44ffd2 #44ffd2 #44ffd2 #ffffff;
+  }
